<resources>
    <string name="app_name">RaceReminderAC</string>

    <!-- Component labels. -->
    <string name="city_code">City Code</string>
    <string name="race_no">Race No</string>
    <string name="race_sel">Race Sel</string>
    <string name="race_time">Race Time</string>
    <string name="race_code">Race Code</string>

    <!-- Activity/action labels. -->
    <string name="edit_race">Edit Race</string>
    <string name="new_race">New Race</string>
    <string name="copy_race">Copy Race</string>
    <string name="preferences">Preferences</string>
    <string name="multi_selects"> multi </string>

    <!-- ActionBar title. -->
    <string name="title_race_reminder">Race Reminder</string>

    <!-- Button labels. -->
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_ok">OK</string>
    <string name="lbl_time">Race Time</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_copy">Copy</string>
    <string name="lbl_update">Update</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_additional">Additional</string>

    <!-- Checkbox labels. -->
    <string name="lbl_bet_placed">Bet placed.</string>
    <string name="lbl_multi_select">Multi</string>

    <!-- TextView labels. -->
    <string name="lbl_selections">Selections</string>

    <!-- Delete Dialog text. -->
    <string name="title_delete_all">Delete All</string>
    <string name="message_delete_all">Are you sure?</string>

    <!-- Menu labels. -->
    <string name="lbl_delete">Delete</string>
    <string name="lbl_delete_all">Delete All</string>
    <string name="lbl_refresh">Refresh</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_add">New</string>
    <string name="lbl_race_count">Count</string>
    <string name="lbl_notifications">Notifications</string>

    <!-- Race related labels. -->
    <string name="lbl_trainer">Trainer</string>
    <string name="lbl_horse">Horse</string>
    <string name="lbl_jockey">Jockey</string>
    <string name="lbl_trainer_name">T Gollan</string>
    <string name="lbl_horse_name">Something Special</string>
    <string name="lbl_jockey_name">J Byrne</string>

    <!-- Tags. -->
    <string name="tag_delete_all_dialog">tag_delete_all_dialog</string>

    <!-- Toast. -->
    <string name="toast_nothing_to_delete">Nothing to delete.</string>

    <!-- Network labels. -->
    <string name="lbl_network_either">Either</string>
    <string name="lbl_network_wifi">WiFi</string>
    <string name="lbl_network_mobile">Mobile</string>
    <string name="lbl_network_none">None</string>
    <string name="lbl_network_pref_dialog_title">Network Preference</string>

    <string name="title_no_network">No Network</string>
    <string name="message_no_network">No network connection exists. Check your device settings.</string>

    <!-- Keys. -->
    <string name="key_edit_type">edit_type</string>
    <string name="key_edit_existing">edit_existing</string>
    <string name="key_edit_existing_multi">edit_existing_multi</string>
    <string name="key_edit_existing_vals">edit_existing_multi_vals</string>
    <string name="key_edit_copy">edit_copy</string>
    <string name="key_multi_select_dialog_vals">key_multi_select_dialog</string>
    <string name="key_extras_dialog_vals">key_extras_dialog</string>

    <!-- Preferences keys and title/summary values. -->
    <string name="key_defaults">key_defaults</string>
    <string name="defaults_title">Defaults</string>

    <string name="key_race_code_pref">key_race_code_pref</string>
    <string name="race_code_pref_title">Default Race Code</string>
    <string name="race_code_pref_summary">Select default Race Code.</string>

    <string name="key_city_code_pref">key_city_code_pref</string>
    <string name="city_code_pref_title">Default Race City</string>
    <string name="city_code_pref_summary">Select default Race City Code.</string>

    <string name="key_notif">key_notif</string>
    <string name="notif_title">Notifications</string>

    <string name="key_race_notif_send_pref">key_race_notif_send_pref</string>
    <string name="race_notif_send_pref_summary">Post notifications when nearing Race time.</string>

    <string name="key_notif_send_multi_pref">key_notif_send_multi_pref</string>
    <string name="notif_send_multi_pref_summary">Allow multiple notifications for the same Race.</string>

    <!--<string name="key_maint">key_maint</string>-->
    <!--<string name="maint_title">Maintenance</string>-->

    <!--<string name="key_maint_del_archv_pref">key_maint_del_archv_pref</string>-->
    <!--<string name="maint_del_archv_title">Delete Archived</string>-->
    <!--<string name="maint_del_archv_summary">Delete archived Race records.</string>-->

    <!-- Undo. -->
    <string name="key_recovery">key_recovery</string>
    <string name="recovery_title">Recovery</string>
    <string name="key_recovery_undo_last_pref">key_recovery_undo_last_pref</string>
    <string name="recovery_undo_last_title">Undo Last Delete</string>
    <string name="recovery_undo_last_summary">Undo the last item deleted.</string>

    <!-- Refresh. -->
    <string name="key_refresh_interval">key_refresh_interval</string>
    <string name="refresh_interval_title">Refresh Interval</string>
    <string name="key_refresh_interval_pref">key_refresh_interval_pref</string>
    <string name="refresh_interval_summary">Enable a screen refresh interval.</string>
    <string name="key_refresh_interval_seek_pref">key_refresh_interval_seek_pref</string>
    <string name="refresh_interval_seek_summary">Set the Refresh interval in minutes.</string>
    <string name="key_refresh_interval_seek_pref_val">key_refresh_interval_seek_pref_val</string>

    <!-- Multi select. -->
    <string name="key_multi_select">key_multi_select</string>
    <string name="multi_select_title">Multi Select</string>
    <string name="multi_select_summary_title">Enable multi select</string>
    <string name="key_multi_select_pref">key_multi_select_pref</string>
    <string name="mult_select_summary">Enable multiple Race selections.</string>

    <!-- Bulk delete. -->
    <string name="key_bulk_delete">key_bulk_delete</string>
    <string name="bulk_delete_title">Bulk Delete</string>
    <string name="bulk_delete_summary">Enable bulk delete</string>
    <string name="key_bulk_delete_pref">key_bulk_delete_pref</string>
    <string name="delete_summary">Enable bulk delete of all Races.</string>

    <!-- Tatts network preference. -->
    <string name="key_network">key_network</string>
    <string name="network_title">Network</string>
    <string name="key_network_enable">key_network_enable</string>
    <string name="key_network_type_pref">key_network_pref</string>
    <string name="network_enable_title">Enable Network Download</string>
    <string name="network_enable_summary">Download Race details from the Tatts network.</string>
    <string name="network_type_pref_title">Default Download Type</string>
    <string name="network_type_pref_summary">Select the default download type.</string>

    <!-- Preferences Toast messages. -->
    <string name="default_race_code_msg">Default Race Code changed to </string>
    <string name="default_city_code_msg">Default City Code changed to </string>
    <string name="default_network_msg">Default Network changed to </string>
    <string name="arch_removal_msg">Archived records removed.</string>

    <!-- Notification. -->
    <string name="nearing_race_time">Nearing race time</string>

    <!-- CityCodes array. -->
    <string-array name="cityCodes">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>I</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>S</item>
        <item>T</item>
        <item>V</item>
        <item>X</item>
        <item>Z</item>
    </string-array>

    <!-- Requirement for ListPreference. -->
    <string-array name="cityCodesVals">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>I</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>S</item>
        <item>T</item>
        <item>V</item>
        <item>X</item>
        <item>Z</item>
    </string-array>

    <!-- RaceCodes array. -->
    <string-array name="raceCodes">
        <item>R</item>
        <item>T</item>
        <item>G</item>
        <item>S</item>
    </string-array>

    <!-- Requirement for ListPreference. -->
    <string-array name="raceCodesVals">
        <item>R</item>
        <item>T</item>
        <item>G</item>
        <item>S</item>
    </string-array>

    <!-- RaceNum array. -->
    <string-array name="raceNum">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <!-- RaceSel array. -->
    <string-array name="raceSel">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>

    <!-- Time picker dialog tag. -->
    <string name="tag_time_picker_dialog">time_pick_dialog</string>

    <!-- EditText layout default values. -->
    <string name="abbrv_city_code">B</string>
    <string name="abbrv_time">23:59</string>
    <string name="abbrv_date">01/01/2019</string>
    <string name="abbrv_race_no">8</string>
    <string name="abbrv_race_sel">8</string>
    <string name="abbrv_race_code">R</string>

    <string-array name="networkTypePref">
        <item>None</item>
        <item>WiFi</item>
        <item>Mobile</item>
        <item>Either</item>
    </string-array>

    <string-array name="networkTypePrefVals">
        <item>1</item> <!-- Constants.NETWORK_NONE -->
        <item>2</item> <!-- Constants.NETWORK_WIFI -->
        <item>3</item> <!-- Constants.NETWORK_MOBILE -->
        <item>4</item> <!-- Constants.NETWORK_EITHER -->
    </string-array>

    <!-- Tatts.com URL info. -->
    <string name="tatts_base_url_path">https://tatts.com/pagedata/racing</string>
</resources>
