<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="@string/key_defaults"
        app:title="@string/defaults_title">

        <ListPreference
            app:key="@string/key_race_code_pref"
            app:title="@string/race_code_pref_title"
            app:summary="@string/race_code_pref_summary"
            app:entries="@array/raceCodes"
            app:entryValues="@array/raceCodesVals" />

        <ListPreference
            app:key="@string/key_city_code_pref"
            app:title="@string/city_code_pref_title"
            app:summary="@string/city_code_pref_summary"
            app:entries="@array/cityCodes"
            app:entryValues="@array/cityCodesVals" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="@string/key_notif"
        app:title="@string/notif_title">

        <SwitchPreferenceCompat
            app:key="@string/key_race_notif_send_pref"
            app:defaultValue="false"
            app:summary="@string/race_notif_send_pref_summary"/>

        <SwitchPreferenceCompat
            app:key="@string/key_notif_send_multi_pref"
            app:enabled="false"
            app:defaultValue="false"
            app:summary="@string/notif_send_multi_pref_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="key_maint"
        app:title="Maintenance">

        <Preference
            app:key="key_maint_del_archived"
            app:title="Delete Archived"
            app:summary="Delete archived Race records."/>

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>