<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Note: This is the only one actually selectable. -->
    <item android:id="@+id/id_mnu_delete_all"
        android:title="@string/lbl_delete_all"
        android:visible="false"
        android:icon="@drawable/ic_delete_24px"
        app:showAsAction="ifRoom"/>

    <!-- Show an indicator that Notification is set. -->
    <item android:id="@+id/id_mnu_notifications"
        android:title="@string/lbl_notifications"
        android:visible="false"
        app:actionLayout="@layout/notifications"
        app:showAsAction="ifRoom"/>

    <!-- Show an indicator that Multi Select is set. -->
    <item android:id="@+id/id_mnu_multi_select"
        android:title="@string/lbl_multi_select"
        android:visible="false"
        app:actionLayout="@layout/multi_select"
        app:showAsAction="ifRoom"/>

    <!-- Show a refresh interval indicator. -->
    <item android:id="@+id/id_mnu_refresh_interval"
        android:title="@string/lbl_refresh"
        android:visible="false"
        app:actionLayout="@layout/refresh"
        app:showAsAction="ifRoom" />

</menu>