<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ui.MainFragment">

    <!--<item android:id="@+id/id_delete"-->
        <!--android:enabled="true"-->
        <!--android:icon="@drawable/ic_delete_24px"-->
        <!--android:title="@string/lbl_delete" />-->

    <item android:id="@+id/id_refresh"
        android:enabled="true"
        android:icon="@drawable/ic_refresh_24px"
        android:title="@string/lbl_refresh"/>

    <item android:id="@+id/id_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings_24px"
        android:title="@string/lbl_settings"/>

    <item android:id="@+id/id_add"
        android:enabled="true"
        android:icon="@drawable/ic_add_circle_24px"
        android:title="@string/lbl_add"/>
</menu>
