<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RadioGroup
        android:id="@+id/id_rg_network_prefs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4">

        <RadioButton
            android:id="@+id/id_rb_either"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_network_either" />

        <RadioButton
            android:id="@+id/id_rb_wifi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/lbl_network_wifi" />

        <RadioButton
            android:id="@+id/id_rb_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_network_mobile" />

        <RadioButton
            android:id="@+id/id_rb_none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_network_none" />
    </RadioGroup>

    <TextView
        android:id="@+id/id_tv_network_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/lbl_network_pref_dialog_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="43dp" />
</androidx.constraintlayout.widget.ConstraintLayout>