<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:focusable="true"
    android:clickable="true"
    android:layout_margin="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/abbrv_city_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/id_tv_city_code"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" />

        <TextView
            android:text="@string/abbrv_race_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/id_tv_race_code"
            app:layout_constraintLeft_toRightOf="@+id/id_tv_city_code"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" />

        <TextView
            android:text="@string/abbrv_race_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/id_tv_race_no"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toRightOf="@+id/id_tv_race_code"
            app:layout_constraintTop_toTopOf="parent"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            app:layout_constraintBaseline_toBaselineOf="@+id/id_tv_race_sel"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" />

        <TextView
            android:text="@string/abbrv_race_sel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_tv_race_sel"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toRightOf="@+id/id_tv_race_no"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/id_tv_race_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/abbrv_time"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/id_tv_race_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/abbrv_date"
            android:textAppearance="@android:style/TextAppearance.Material.Small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_tv_race_time" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
