<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_cv_row_race"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:focusable="true"
    android:clickable="true"
    android:layout_margin="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/id_cb_bet_placed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/id_tv_city_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/abbrv_city_code"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            card_view:layout_constraintBottom_toTopOf="@+id/id_gl_horiz_row_exp"
            card_view:layout_constraintEnd_toStartOf="@+id/id_tv_race_code"
            card_view:layout_constraintStart_toEndOf="@+id/id_cb_bet_placed"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/id_tv_race_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/abbrv_race_code"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            card_view:layout_constraintBottom_toTopOf="@+id/id_gl_horiz_row_exp"
            card_view:layout_constraintEnd_toStartOf="@+id/id_gl_race_no"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/id_tv_race_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/abbrv_race_no"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            card_view:layout_constraintBottom_toTopOf="@+id/id_gl_horiz_row_exp"
            card_view:layout_constraintStart_toStartOf="@+id/id_gl_race_no"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/id_tv_race_sel0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/abbrv_race_sel"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            card_view:layout_constraintBottom_toTopOf="@+id/id_gl_horiz_row_exp"
            card_view:layout_constraintStart_toStartOf="@+id/id_gl_race_sel"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/id_tv_race_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/abbrv_time"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/id_tv_race_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/abbrv_date"
            android:textAppearance="@android:style/TextAppearance.Material.Small"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/id_tv_race_time" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/id_gl_race_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            card_view:layout_constraintGuide_begin="104dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/id_gl_race_sel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            card_view:layout_constraintGuide_begin="144dp" />

        <TextView
            android:id="@+id/id_tv_race_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="9"
            android:textAppearance="@android:style/TextAppearance.Material.Small"
            card_view:layout_constraintEnd_toEndOf="@+id/id_tv_city_code"
            card_view:layout_constraintStart_toStartOf="@+id/id_tv_city_code"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/id_tv_race_sel1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/abbrv_race_sel"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            card_view:layout_constraintBottom_toTopOf="@+id/id_gl_horiz_row_exp"
            card_view:layout_constraintStart_toEndOf="@+id/id_tv_race_sel0"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/id_tv_race_sel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/abbrv_race_sel"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            card_view:layout_constraintBottom_toTopOf="@+id/id_gl_horiz_row_exp"
            card_view:layout_constraintStart_toEndOf="@+id/id_tv_race_sel1"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/id_tv_race_sel3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/abbrv_race_sel"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            card_view:layout_constraintBottom_toTopOf="@+id/id_gl_horiz_row_exp"
            card_view:layout_constraintStart_toEndOf="@+id/id_tv_race_sel2"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/id_tv_multi"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:text="@string/multi_selects"
            android:textAppearance="@android:style/TextAppearance.Material.Small"
            android:visibility="gone"
            card_view:layout_constraintStart_toStartOf="@+id/id_gl_race_sel"
            card_view:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/id_iv_expand"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/icon_expand_more_24px"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/id_cb_bet_placed"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/id_tv_exp_trainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/lbl_trainer"
            android:textAppearance="@android:style/TextAppearance.Material.Small"
            card_view:layout_constraintBottom_toTopOf="@+id/id_tv_exp_trainer_name"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="@+id/id_gl_horiz_row_exp" />

        <TextView
            android:id="@+id/id_tv_exp_trainer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_trainer_name"
            android:textAppearance="@android:style/TextAppearance.Material.Small"
            card_view:layout_constraintStart_toStartOf="@+id/id_tv_exp_trainer"
            card_view:layout_constraintTop_toBottomOf="@id/id_tv_exp_trainer" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/id_gl_horiz_row_exp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            card_view:layout_constraintGuide_begin="96dp" />

        <TextView
            android:id="@+id/id_tv_exp_horse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/lbl_horse"
            android:textAppearance="@android:style/TextAppearance.Material.Small"
            card_view:layout_constraintStart_toEndOf="@+id/id_tv_exp_trainer"
            card_view:layout_constraintTop_toTopOf="@+id/id_gl_horiz_row_exp" />

        <TextView
            android:id="@+id/id_tv_exp_horse_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_horse_name"
            card_view:layout_constraintStart_toStartOf="@+id/id_tv_exp_horse"
            card_view:layout_constraintTop_toBottomOf="@+id/id_tv_exp_horse" />

        <TextView
            android:id="@+id/id_tv_exp_jockey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginTop="8dp"
            android:text="@string/lbl_jockey"
            android:textAppearance="@android:style/TextAppearance.Material.Small"
            card_view:layout_constraintStart_toEndOf="@+id/id_tv_exp_horse"
            card_view:layout_constraintTop_toTopOf="@+id/id_gl_horiz_row_exp" />

        <TextView
            android:id="@+id/id_tv_exp_jockey_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_jockey_name"
            card_view:layout_constraintStart_toStartOf="@+id/id_tv_exp_jockey"
            card_view:layout_constraintTop_toBottomOf="@+id/id_tv_exp_jockey" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
